--- a/index.html
+++ b/index.html
@@ -16,10 +16,80 @@
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
-   <button class="sidebar-toggle">
-<i class="fa-solid fa-bars"></i>
-   </button>
+    <!-- toggle button -->
+    <button class="sidebar-toggle">
+      <i class="fa-solid fa-bars"></i>
+    </button>
+    <!-- end of toggle button -->
+
+    <!-- sideBar -->
+    <aside class="sidebar">
+      <!-- header -->
+      <div class="sidebar-header">
+        <h3 class="logo">
+          Ugo-<span class="x-logo"><i class="fa-brands fa-xing"></i></span>
+        </h3>
+        <!-- close btn -->
+        <button type="button" class="close-btn">
+          <i class="fa-solid fa-xmark"></i>
+        </button>
+        <!-- end of close btn -->
+      </div>
+      <!-- end of header -->
+      <!-- links -->
+      <ul class="links">
+        <li>
+          <a href="index.html"> home</a>
+        </li>
+        <li>
+          <a href="index.html"> about</a>
+        </li>
+        <li>
+          <a href="index.html"> projects</a>
+        </li>
+        <li>
+          <a href="index.html"> contact</a>
+        </li>
+      </ul>
+      <!-- end of links -->
+      <!-- social icons -->
+      <ul class="social-links">
+        <li>
+          <a href="https://github.com/Ugo-X" class="social-icon" target="_blank"
+            ><i class="fa-brands fa-github"></i>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://twitter.com/iUgonnaDike?t=33gnViD6FeqcrBhFnEPQYg&s=09"
+            target="_blank"
+            class="social-icon"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="http://www.instagram.com/ugoo_x"
+            class="social-icon"
+            target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="http://www.linkedin.com/in/ugonna-dike-a57182189"
+            target="_blank"
+            class="social-icon"
+          >
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+        </li>
+      </ul>
+      <!-- end of social icons -->
+    </aside>
+    <!-- end of sidebar -->
+
     <!-- javascript -->
-    <!-- <script src="./app.js"></script> -->
+    <script src="./app.js"></script>
   </body>
 </html>
